# expresscpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh  conanfile.py  conanfile.txt  format_code.sh  package.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
cmake/: conan.cmake  sanitizers.cmake
doc/: README.md  arch_overview.pu  debug.md  router_overview.pu
docker/ci/: Dockerfile
docker/ci_clang8/: Dockerfile
docker/ci_clang9/: Dockerfile
docker/ci_gcc8/: Dockerfile
docker/ci_gcc9/: Dockerfile
docker/dev_debian/: Dockerfile
example/: CMakeLists.txt  beast_async_server.cpp  embed_favicon_in_header_file.cmake  error_handler.cpp  main.cpp  middleware_auth_like.cpp  middleware_logger_like.cpp  multiple_handlers.cpp  query_params.cpp  readme.cpp  router.cpp  serve_favicon.cpp  serve_static.cpp  simple_rest_api_server.cpp  simple_rest_router_server.cpp  simple_rest_router_server.js  simple_static_file_server.cpp  static_file_server.cpp  template_handlers.cpp  url_params.cpp
include/expresscpp/: console.hpp  date.hpp  exports.hpp  expresscpp.hpp  fetch.hpp  handler.hpp  handlerfunctor.hpp  http_method.hpp  key.hpp  layer.hpp  nextrouter.hpp  options.hpp  path_to_regexp.hpp  request.hpp  response.hpp  route.hpp  router.hpp  types.hpp  url.hpp
include/expresscpp/impl/: listener.hpp  matcher.hpp  routing_stack.hpp  session.hpp  utils.hpp
include/expresscpp/middleware/: serve_favicon_provider.hpp  serve_static_provider.hpp  staticfileprovider.hpp
scripts/: build_call_graph.sh  build_tests.sh  execute_test_multipletimes.sh  execute_tests.sh  get_coverage.sh
src/: console.cpp  date.cpp  expresscpp.cpp  fetch.cpp  handler.cpp  handlerfunctor.cpp  http_method.cpp  layer.cpp  listener.cpp  matcher.cpp  nextrouter.cpp  path_to_regexp.cpp  request.cpp  response.cpp  route.cpp  router.cpp  session.cpp  types.cpp  url.cpp  utils.cpp
src/middleware/: favicon.cpp  serve_favicon_provider.cpp  serve_static_provider.cpp  staticfileprovider.cpp
test/: CMakeLists.txt  README.md  basic.cpp  basic_.js  basic_dump_stack.js  console.cpp  date.cpp  error_handler.cpp  hello_world.cpp  helper.cpp  helper.hpp  http_methods.cpp  http_methods_.js  layer.cpp  long_session.cpp  middleware.cpp  middleware_auth.js  middleware_logging.js  multiple_handlers.cpp  path_to_regexp.cpp  routing.cpp  routing_table.cpp  serve_favicon.cpp  startstop.cpp  static_file_middleware.cpp  test.cpp  test_utils.cpp  test_utils.hpp  url.cpp  utils.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
